--- a/BRabbitMQ/BRabbitMQ.Banking.Application/BRabbitMQ.Banking.Application.csproj
+++ b/BRabbitMQ/BRabbitMQ.Banking.Application/BRabbitMQ.Banking.Application.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BRabbitMQ.Banking.Domain\BRabbitMQ.Banking.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
