--- a/BRabbitMQ/BRabbitMQ.Banking.Domain/BRabbitMQ.Banking.Domain.csproj
+++ b/BRabbitMQ/BRabbitMQ.Banking.Domain/BRabbitMQ.Banking.Domain.csproj
@@ -5,10 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="CommandHandlers" />
-      <Folder Include="Commands" />
       <Folder Include="EventHandlers" />
-      <Folder Include="Events" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BRabbitMQ.Domain.Core\BRabbitMQ.Domain.Core.csproj" />
     </ItemGroup>
 
 </Project>
